# pfs-rs

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  README_CN.md
pf8/: Cargo.toml  LICENSE  README.md
pf8/examples/: basic_usage.rs  progress_callback.rs
pf8/src/: archive.rs  builder.rs  callbacks.rs  constants.rs  crypto.rs  display.rs  entry.rs  error.rs  format.rs  lib.rs  reader.rs  util.rs  utils.rs  writer.rs
pf8/tests/: integration_tests.rs
pfs-rs/: Cargo.toml
pfs-rs/src/: lib.rs  main.rs  util.rs
pfs-rs/tests/: cli_file_tests.rs  cli_tests.rs
src/: lib.rs  main.rs  pf8.rs  util.rs
