[workspace]
members = ["pfs-rs", "pf8"]
resolver = "2"

[profile.release]
lto = true
strip = true

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3.2"
log = "0.4.27"
memmap2 = "0.9.7"
sha1 = "0.10.6"
walkdir = "2.5.0"
tabled = "0.20.0"
human_bytes = { version = "0.4.3", default-features = false }
tempfile = { version = "3.20.0" }

