[workspace]
members = ["pfs-rs", "pf8"]
resolver = "2"

[profile.release]
lto = true
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
log = "0.4"
sha1 = "0.10"
walkdir = "2.5"
tabled = { version = "0.20", default-features = false, features = ["derive"] }
human_bytes = { version = "0.4", default-features = false }
tempfile = "3.20"
thiserror = "2.0"
