[workspace]
members = ["pfs-rs", "pf8"]
resolver = "2"

[profile.release]
lto = true
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.29"
sha1 = "0.10.6"
walkdir = "2.5.0"
tabled = { version = "0.20.0", default-features = false, features = ["derive"] }
human_bytes = { version = "0.4.3", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
