[package]
name = "pf8"
version = "0.1.4"
edition = "2024"
description = "A Rust library for encoding and decoding artemis PF8 archive files"
keywords = ["pfs", "pf8", "archive", "galgame"]
repository = "https://github.com/sakarie9/pfs-rs"
license = "MIT"
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
sha1 = { workspace = true }
walkdir = { workspace = true }

# Optional dependencies for extra features
human_bytes = { workspace = true, optional = true }
tabled = { workspace = true, optional = true }

[features]
default = ["display"]
display = ["human_bytes", "tabled"]

[dev-dependencies]
tempfile = { workspace = true }
