[package]
name = "pfs-rs"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "pfs-rs"
path = "src/main.rs"

[features]
default = ["display"]
display = ["pf8/display"]

[dependencies]
pf8 = { path = "../pf8" }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
